--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cyriacbr/react-split-text": "^1.0.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.11",
+    "gsap": "^3.12.5",
     "next": "15.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
